<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wallet</string>
    <string name="action_settings">Settings</string>
    <string name="title_add_element">Add Element</string>
    <string name="help_feedback">Help &amp; FeedBack</string>
    <string name="feedback">Send FeedBack</string>
    <string name="action_search">Search</string>
    <string name="action_archive">Done</string>
    <string name="action_save">Save</string>

    <string name="action_modify">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_payed">Paid</string>
    <string name="action_unpayed">Unpaid</string>
    <string name="action_select_all">Select All</string>
    <string name="action_refresh">Refresh</string>

    <string name="error">Error</string>

    <string name="elements_deleted">elements deleted</string>
    <string name="elements_restored">elements restored</string>
    <string name="element_paid">Element Paid</string>
    <string name="element_unpaid">Element Unpaid</string>
    <string name="errore_people">Insert Who</string>
    <string name="element_added">Element Added</string>
    <string name="element_modified">Element Modified</string>
    <string name="ask_delete_element">Delete this Element</string>
    <string name="element_deleted">Element Deleted</string>
    <string name="undo">UNDO</string>
    <string name="attention">Warning</string>
    <string name="ask_exit">Are you sure you want to discard changes</string>
    <string name="congratulations">Congratulations</string>
    <string name="noitem">There\'re no payments to complete</string>
    <string name="never">Never</string>
    <string name="no_elementss">No Elements</string>
    <string name="action_exit_editor">Discard</string>
    <string name="error_undefined">Undefined</string>
    <string name="title_activity_main">Payments List</string>

    <string name="unknow">Unknow</string>
    <string name="debt_free">Debt Free</string>
    <string name="euro">€</string>
    <string name="debit">You have some debit</string>
    <string name="credit">You have some credit</string>
    <string name="you_own">You owe</string>
    <string name="they_own">They owe</string>
    <string name="action_cancel">Cancel</string>
    <string name="note">Note</string>
    <string name="who">Who</string>
    <string name="importo">Amount</string>
    <string name="i_pay">I have to pay</string>
    <string name="title_activity_settings">Settings</string>
    <string name="you_own_to">You owe to</string>
    <string name="they_own_to">You owe from</string>
    <string name="error_importo">Insert Amount</string>
    <string name="action_change_currency">Change Currency</string>
    <string name="action_change_currency_subtitle">There will be no change of currency amounts previously added</string>
    <string name="title_name">Wallet</string>
    <string name="option_archived">Archive</string>
    <string name="options_not_archived">To do</string>
    <string name="text_note">Note:</string>
    <string name="help_feedback_subtitle">The Google + Community for help, send feedback and suggestions</string>
    <string name="action_filter_title">Filter Items</string>
    <string name="action_filter_subtitle">Choose which debts in the main list view of your wallet</string>
    <string name="filter_archive_0">Only new items</string>
    <string name="filter_archive_1">Only archived items</string>
    <string name="filter_archive_2">All items</string>
    <string name="action_notification_title">Summary Notification</string>
    <string name="action_notification_subtitle">Summary notification will show when there are elements</string>
    <string name="subtitle_notification">Current amount: %s</string>
    <string name="action_notification_subtitle_not">Summary notification is not shown, even if there are elements</string>
    <string name="action_update">Update</string>
    <string name="action_done_all">Done all Items</string>
    <string name="ask_archive_items">Are you sure you want to store these items</string>
    <string name="title_preferences_pin">Protect your stuff</string>
    <string name="pin_enabled">Pin protection enabled</string>
    <string name="pin_disabled">Pin protection disabled</string>
    <string name="title_add_pin">Choose Pasw</string>
    <string name="text_password">Password</string>
    <string name="subtitle_add_pasw">Enter a password to protect your things.\n(Remove the pin if you do not want protection)</string>
    <string name="text_never">Never</string>
    <string name="seconds">s</string>
    <string name="minutes">m</string>
    <string name="hours">h</string>
    <string name="days">d</string>
    <string name="weeks">w</string>
    <string name="error_importo_sbagliato">Error, import is not valid</string>
</resources>