<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="nego.reminders.Main">
    <item android:id="@+id/action_select_all" android:icon="@drawable/ic_action_content_select_all" android:title="@string/action_select_all"
        android:orderInCategory="90" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_done_all" android:icon="@drawable/ic_action_done_all" android:title="@string/action_done_all"
        android:orderInCategory="95" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_delete" android:icon="@drawable/ic_action_delete" android:title="@string/action_delete"
        android:orderInCategory="100" app:showAsAction="ifRoom" />
</menu>