<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:id="@+id/toolbar"
        android:paddingTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:background="@color/icon.l">

        <android.support.v7.widget.AppCompatSpinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:id="@+id/title" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:id="@+id/relativeLayout2">
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/who"
                android:id="@+id/persona"
                android:inputType="textCapWords"
                android:textColorHint="@color/secondary_text"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout2"
            android:id="@+id/relativeLayout3"
            android:layout_centerHorizontal="true">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="54sp"
                    android:gravity="center"
                    android:textColor="@color/primary_text"
                    android:textColorHint="@color/secondary_text"
                    android:id="@+id/importo"
                    android:background="@android:color/transparent"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:hint="0"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary_text"
                android:layout_toRightOf="@+id/importo"
                android:layout_toEndOf="@+id/importo"
                android:id="@+id/currency"
                android:textSize="54sp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="16dp"
            android:layout_below="@+id/relativeLayout3"
            android:id="@+id/relativeLayout4" >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/nota"
                android:hint="@string/note"
                android:textColorHint="@color/third_text"
                android:background="@android:color/transparent"
                android:singleLine="false"
                android:maxLines="3"
                android:inputType="textCapSentences"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text" />
        </RelativeLayout>

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:orientation="horizontal"
        android:gravity="center_vertical|end">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_cancel"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:padding="8dp"
            android:fontFamily="sans-serif-medium"
            android:background="?attr/selectableItemBackground"
            android:textColor="@android:color/white"
            android:clickable="true"
            android:id="@+id/cancel_action"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:alpha="0.5"
            android:visibility="gone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_save"
            android:textAppearance="?android:attr/textAppearanceButton"
            android:textAllCaps="true"
            android:textSize="14sp"
            android:padding="8dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:textColor="@color/icon.l"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:id="@+id/buttonpositive" />
    </LinearLayout>
</LinearLayout>
